Updated java container guide